--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,43 @@ header {
     background-position: top; 
     min-height: 800px; 
 }
+
+header h1 {
+	position: relative;
+	top: 500px; 
+	float: right; 
+	font-family: 'Irish Grover', cursive;
+	font-size: 3em;
+	color: #;
+}
+
+header nav {
+	margin: 0;
+	padding: 0;
+	background: #0D3B66;
+	font-size: 2em;
+}
+
+header nav ul {
+	list-style: none;
+	margin: 0; 
+	padding: 10px 0 10px 0; 
+}
+
+header nav ul li {
+	
+	display: inline-block;
+    margin-right: 1em;
+}
+
+header nav a {
+	color: #FAF0CA;
+	text-decoration: none; 
+	padding: 30px 25px 13px 25px; 
+}
+
+/* Pseudo-Class Selector */ 
+header nav a:hover {
+	background: #F4D35E; 
+	        /* #rrggbbaa */ 
+}
