--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,11 @@
 }
 
 body {
-	background-color: white; 
+	background-color: #0D3B66; 
 }
 
 header {
-	min-height: 300px; 
-	background-image: url("../images/Family_Guy_Logo.svg (1).png");
+	min-height: 300px;
 	background-repeat: no-repeat;
 	background-size: cover; 
 	background-position: 20% 20%;
@@ -18,21 +17,21 @@ header {
 
 header h1 {
 	margin-left: 35%;
-	color: black; 
+	color: #FAF0CA; 
 	font-weight: bold;
 	font-size: 7em;
 }
 
 header h2 {
 	margin-left: 45%; 
-	color: #A69581; 
+	color: #F4D35E; 
 	font-size: 3em; 
 }
 
 .hnav {
 	padding: 5px 0;
 	width: 100%;
-	background-color: #A69581; 
+	background-color: #0D3B66; 
 	min-height: 50px; 
 }
 
@@ -45,12 +44,12 @@ header h2 {
 	display: inline-block;
 	list-style: none;
 	width: 10%; 
-	background-color: #04B2D9; 
+	background-color: #FAF0CA; 
 	margin-top: .8%;
 }
 
 .hnav a {
-	color: white;
+	color: #F4D35E;
 	text-decoration: none; 
 	font-size: 1.5em; 
 }
@@ -58,7 +57,7 @@ header h2 {
 .fnav {
 	padding: 5px 0;
 	width: 100%;
-	background-color: #A69581; 
+	background-color: #0D3B66; 
 	min-height: 50px; 
 }
 
@@ -71,12 +70,12 @@ header h2 {
 	display: inline-block;
 	list-style: none;
 	width: 10%; 
-	background-color: #04B2D9; 
+	background-color: #FAF0CA; 
 	margin-top: .8%;
 }
 
 .fnav a {
-	color: white;
+	color: #0D3B66;
 	text-decoration: none; 
 	font-size: 1.5em; 
 }
