--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,46 @@
+/* CSS Document */
 
+/* CSS Reset */
 body {
-	background-color: #0D3B66; 
+    margin: 0;
 }
-
-header {
-	min-height: 300px;
-	background-repeat: no-repeat;
-	background-size: cover; 
-	background-position: 20% 20%;
-}
-
-header h1 {
-	margin-left: 35%;
-	color: #FAF0CA; 
-	font-weight: bold;
-	font-size: 7em;
-}
-
-header h2 {
-	margin-left: 45%; 
-	color: #F4D35E; 
-	font-size: 3em; 
-}
-
+    
 nav {
-	padding: 5px 0;
-	width: 100%;
-	background-color: #0D3B66; 
-	min-height: 50px; 
+    margin: 0;
+    padding: 10px 25px;
+    background-color: #0D3B66;
 }
-
+    
 nav ul {
-	display: block; 
-	text-align: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
-
-nav ul li {
-	display: inline-block;
-	list-style: none;
-	width: 10%; 
-	background-color: #FAF0CA; 
-	margin-top: .8%;
+    
+nav li {
+    display: inline;
 }
-
+    
 nav a {
-	color: #F4D35E;
-	text-decoration: none; 
-	font-size: 1.5em; 
+    padding: 10px 25px;
+    font-size: 2em;
+    text-decoration: none;
+    color: #FAF0CA;
+}
+    
+nav a:hover {
+    color: #F4D35E;
+    text-decoration: underline;
+}
+    
+    
+header {
+    top: 0;
+    background-color: #0D3B66;
+    height: 190px;
 }
 
-.fnav {
-	padding: 5px 0;
-	width: 100%;
-	background-color: #0D3B66; 
-	min-height: 50px; 
-}
+blockquote {
 
-.fnav ul {
-	display: block; 
-	text-align: center;
-}
-
-.fnav ul li {
-	display: inline-block;
-	list-style: none;
-	width: 10%; 
-	background-color: #FAF0CA; 
-	margin-top: .8%;
-}
-
-.fnav a {
-	color: #0D3B66;
-	text-decoration: none; 
-	font-size: 1.5em; 
 }
