--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ nav a:hover {
     
 header {
     top: 0;
-    background-color: #0D3B66;
+    background-color: #F4D35E;
     height: 190px;
 }
 
