--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 nav {
     margin: 0;
     padding: 10px 25px;
-    background-color: #0D3B66;
+    background-color: #F4D35E;
 }
     
 nav ul {
@@ -30,7 +30,7 @@ nav a {
 }
     
 nav a:hover {
-    color: #F4D35E;
+    color: #0D3B66;
     text-decoration: underline;
 }
     
