--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,11 @@ header {
 blockquote {
 
 }
+
+footer {
+    text-align: center;
+    font-size: 0.85em;
+    background-color: #F4D35E;
+    color: #0D3B66;
+    padding: 1% 0%;
+     }
