--- a/css/styles.css
+++ b/css/styles.css
@@ -44,10 +44,18 @@ header {
 blockquote {
 
 }
-
-.btn {
-    grid-column: 1 / span 3; 
-}
+.button {
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
 
 footer {
     text-align: center;
