--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,14 @@ blockquote {
     cursor: pointer;
   }
 
-  footer {
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
     text-align: center;
-    font-size: 0.85em;
-    background-color: #F4D35E;
-    color: #0D3B66;
-    padding: 1% 0%;
-     }
+  }
+
+  
