--- a/css/styles.css
+++ b/css/styles.css
@@ -62,9 +62,7 @@ blockquote {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: red;
-    color: white;
+    background-color: #F4D35E;
+    color: #0D3B66;
     text-align: center;
   }
-
-  
