--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,20 @@ article:nth-of-type(2) {
 	background-color: rgba(204, 204, 204, 0.3); 
 }
 
+#container {
+	padding: 2% 0; 
+	margin: 0 auto; 
+	width: 80%; 
+	min-height: 500px; 
+	font-size: 1.8em; 
+	color: #0D3B66;
+}
+
+#container img {
+	float: left; 
+	padding-right: 2%; 
+}
+
 .button {
     border: none;
     color: white;
