--- a/css/styles.css
+++ b/css/styles.css
@@ -97,9 +97,9 @@ article:nth-of-type(2) {
 	margin: 50px 0 0 0;
 	padding: 0;
 	width: 100%; 
-	background-color: #070202;
+	background-color: #F4D35E;
 	text-align: center; 
-	color: #0091DF;
+	color:  #0D3B66;
 	min-height: 300px; 
 }
 
@@ -107,7 +107,7 @@ footer nav {
 	clear:both;
 	margin: 50 0 0 0; 
 	padding: 0;
-	background-color: #070202;
+	background-color:  #F4D35E;
 	min-height: 60px;
 	font-size: 1em; 
 }
@@ -126,7 +126,7 @@ footer nav ul li {
 }
 
 footer nav a {
-	color: #0091DF; 
+	color:  #0D3B66;
 	text-decoration: none;
 	padding-right: 50px; 
 }
@@ -138,7 +138,7 @@ footer .emoji {
 }
 
 footer nav a:hover {
-	color:#0091DF;
+	color: #FAF0CA;
 	text-decoration: underline;
 }
 
