--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 /* CSS Reset */
 body {
     margin: 0;
+    background-color: #0D3B66;
 }
     
 nav {
@@ -97,6 +98,11 @@ article:nth-of-type(2) {
     transition-duration: 0.4s;
     cursor: pointer;
   }
+
+  main {
+	background: #0D3B66
+	color: #F4D35E;
+}
 
   footer {
 	clear:both; 
